; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_88pm860x-core.c_device_touch_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_88pm860x-core.c_device_touch_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.TYPE_6__*, i32, i32 }
%struct.pm860x_chip = type { i32, i32 }
%struct.pm860x_platform_data = type { i32 }

@touch_devs = common dso_local global %struct.TYPE_6__* null, align 8
@touch_resources = common dso_local global %struct.TYPE_6__* null, align 8
@.str = private unnamed_addr constant [28 x i8] c"Failed to add touch subdev\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pm860x_chip*, %struct.pm860x_platform_data*)* @device_touch_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @device_touch_init(%struct.pm860x_chip* %0, %struct.pm860x_platform_data* %1) #0 {
  %3 = alloca %struct.pm860x_chip*, align 8
  %4 = alloca %struct.pm860x_platform_data*, align 8
  %5 = alloca i32, align 4
  store %struct.pm860x_chip* %0, %struct.pm860x_chip** %3, align 8
  store %struct.pm860x_platform_data* %1, %struct.pm860x_platform_data** %4, align 8
  %6 = load %struct.pm860x_platform_data*, %struct.pm860x_platform_data** %4, align 8
  %7 = icmp eq %struct.pm860x_platform_data* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %49

9:                                                ; preds = %2
  %10 = load %struct.pm860x_platform_data*, %struct.pm860x_platform_data** %4, align 8
  %11 = getelementptr inbounds %struct.pm860x_platform_data, %struct.pm860x_platform_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** @touch_devs, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i64 0
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 3
  store i32 %12, i32* %15, align 4
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** @touch_devs, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i64 0
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  store i32 4, i32* %18, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** @touch_resources, align 8
  %20 = call i32 @ARRAY_SIZE(%struct.TYPE_6__* %19)
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** @touch_devs, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i64 0
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 2
  store i32 %20, i32* %23, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** @touch_resources, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i64 0
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** @touch_devs, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i64 0
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 1
  store %struct.TYPE_6__* %25, %struct.TYPE_6__** %28, align 8
  %29 = load %struct.pm860x_chip*, %struct.pm860x_chip** %3, align 8
  %30 = getelementptr inbounds %struct.pm860x_chip, %struct.pm860x_chip* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** @touch_devs, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i64 0
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** @touch_devs, align 8
  %35 = call i32 @ARRAY_SIZE(%struct.TYPE_6__* %34)
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** @touch_resources, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i64 0
  %38 = load %struct.pm860x_chip*, %struct.pm860x_chip** %3, align 8
  %39 = getelementptr inbounds %struct.pm860x_chip, %struct.pm860x_chip* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @mfd_add_devices(i32 %31, i32 0, %struct.TYPE_6__* %33, i32 %35, %struct.TYPE_6__* %37, i32 %40, i32* null)
  store i32 %41, i32* %5, align 4
  %42 = load i32, i32* %5, align 4
  %43 = icmp slt i32 %42, 0
  br i1 %43, label %44, label %49

44:                                               ; preds = %9
  %45 = load %struct.pm860x_chip*, %struct.pm860x_chip** %3, align 8
  %46 = getelementptr inbounds %struct.pm860x_chip, %struct.pm860x_chip* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @dev_err(i32 %47, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %49

49:                                               ; preds = %8, %44, %9
  ret void
}

declare dso_local i32 @ARRAY_SIZE(%struct.TYPE_6__*) #1

declare dso_local i32 @mfd_add_devices(i32, i32, %struct.TYPE_6__*, i32, %struct.TYPE_6__*, i32, i32*) #1

declare dso_local i32 @dev_err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
